test/conformance/chainsaw/mutate/clusterpolicy/cornercases/mutate-with-404-api-call/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mutate-404-api-call-example
  namespace: default
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: example
    image: busybox
    args: ["sleep", "infinity"]
