test/conformance/chainsaw/mutate/clusterpolicy/cornercases/mutate-with-404-api-call/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-404-api-call
