test/conformance/chainsaw/mutate/clusterpolicy/cornercases/mutate-with-404-api-call/02-pod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pod
spec:
  timeouts: {}
  try:
  - apply:
      file: pod.yaml
  - assert:
      file: pod-assert.yaml
